Prepare project for assembly, full happy puff with djikstry algorithm, choice between C# and Assembly algorithms

--- a/Djikstry/Djikstry.csproj
+++ b/Djikstry/Djikstry.csproj
@@ -7,6 +7,14 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\DjikstryCSHarp\DjikstryCSHarp.csproj" />
   </ItemGroup>
