Handling executional parameters

--- a/Djikstry/Djikstry.csproj
+++ b/Djikstry/Djikstry.csproj
@@ -16,6 +16,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DjikstryCSHarp\DjikstryCSHarp.csproj" />
   </ItemGroup>
 
